// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaItem renders a rounded media item 1`] = `
<div
  className=""
>
  <div>
    <div />
  </div>
</div>
`;

exports[`MediaItem renders a video with a background image 1`] = `
<div
  className=""
>
  <div>
    <div />
  </div>
  <video
    autoPlay={true}
    loop={true}
    muted={true}
    playsInline={true}
  >
    <source
      src="https://video.url.com"
      type="video/mp4"
    />
  </video>
</div>
`;

exports[`MediaItem renders an image with no video 1`] = `
<div
  className=""
>
  <div>
    <div />
  </div>
</div>
`;

exports[`MediaItem renders content overtop of an image 1`] = `
<div
  className=""
>
  <div>
    <div />
  </div>
  <div>
    <h1>
      This is content overtop of an image
    </h1>
  </div>
</div>
`;
